[package]
name = "xkbcommon"
version = "0.4.0"
authors = ["Remi THEBAULT <remi.thebault@gmail.com>"]
description = "Rust bindings and wrappers for libxkbcommon"
repository = "https://github.com/rust-x-bindings/xkbcommon-rs"
readme = "README.md"
keywords = ["keyboard", "x11", "wayland", "xcb", "input"]
license = "MIT"

[package.metadata.docs.rs]
all-features = true

[dependencies]
libc = "0.2.102"
memmap = { version = "0.7.0", optional = true }
xcb = { version = "1.0.0-beta", features = ["xkb"], optional = true }

[dev-dependencies]
evdev = "0.11.0"

[features]
x11 = ["xcb"]
wayland = ["memmap"]

[[example]]
name = "quick-evdev"
