[package]
name = "xkbcommon"
version = "0.7.0"
authors = ["Remi THEBAULT <remi.thebault@gmail.com>"]
description = "Rust bindings and wrappers for libxkbcommon"
repository = "https://github.com/rust-x-bindings/xkbcommon-rs"
readme = "README.md"
keywords = ["keyboard", "x11", "wayland", "xcb", "input"]
license = "MIT"
edition = "2021"

[package.metadata.docs.rs]
all-features = true

[dependencies]
libc = "0.2.148"
memmap2 = { version = "0.8.0", optional = true }
as-raw-xcb-connection = { version = "1.0", optional = true }
xkeysym = "0.2.0"

[dev-dependencies]
evdev = "0.11.4"

[features]
default = ["wayland"]
x11 = ["as-raw-xcb-connection"]
wayland = ["memmap2"]

[[example]]
name = "quick-evdev"
